# ignition_platform

./: .gitignore  CMakeLists.txt  Guide.txt  compile_commands.json  package.xml
config/: control_modes.yaml
include/ignition_platform/: ignition_bridge.hpp  ignition_platform.hpp
launch/: ignition_platform_launch.py
lib/: ignition_bridge.cpp  ignition_platform.cpp
src/: ignition_platform.cpp  ignition_platform_main.cpp
